syntax = "proto3";
option java_package = 'ar.ne.rcs.proto';

enum CommandType{
  //run once
  DISPOSABLE = 0;

  //keep running at background
  SERVICE = 1;
}

enum CommandStatus{
  ADDED = 0;    //after add
  PENDING = 1;  //after send
  RUNNING = 2;  //after first submit
  FINISHED = 3; //after onComplete
}

message Command{
  int64 id = 1;
  string command = 2;
  Token target = 3;
  int64 time = 4;
  CommandType type = 5;
  CommandStatus status = 6;
}

message CommandResult{
  Command command = 1;
  string result = 2;
  //timestamp,millisecond, java.lang.Long
  int64 time = 3;
  int32 exit_code = 4;
  bool finished = 6;
}

message DeviceDescription{
  string imei = 1;
  string serial_no = 2;
  string android_id = 3;
}

message Token{
  string token = 1;
}