syntax = "proto3";
option java_package = 'ar.ne.rcs.proto.server';

import "ar/ne/rcs/proto/DeviceConnection.proto";
import "ar/ne/rcs/proto/RCS.proto";
import "google/protobuf/empty.proto";

service DeviceConnection{
  //client comes online
  rpc login (DeviceDescription) returns (LoginResponse) {}

  //client notify that he is online
  rpc beat(stream Heartbeat) returns (stream google.protobuf.Empty){}
}

service RemoteCommand{
  //fetch commands
  rpc list (Token) returns (stream Command);

  //submit output
  rpc submit (stream CommandResult) returns (stream google.protobuf.Empty);
}